--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -30,7 +30,7 @@ FROM nginx:1.17.0-alpine
 COPY --from=build /app/build /var/www
 
 # Copy our custom nginx config
-COPY nginx.conf /etc/nginx/nginx.conf
+#COPY nginx.conf /etc/nginx/nginx.conf
 
 # Expose port 80 to the Docker host, so we can access it 
 # from the outside.
