--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
   app-server:
     # Configuration for building the docker image for the backend service
     build:
-      context: backend # Use an image built from the specified dockerfile in the `polling-app-server` directory.
+      context: backend # Use an image built from the specified dockerfile in the `backend` directory.
       dockerfile: Dockerfile
     ports:
       - "8080:8080" # Forward the exposed port 8080 on the container to port 8080 on the host machine
@@ -14,9 +14,9 @@ services:
     depends_on: 
       - db # This service depends on mysql. Start that first.
     environment: # Pass environment variables to the service
-      SPRING_DATASOURCE_URL: jdbc:mysql://db:3306/polls?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
-      SPRING_DATASOURCE_USERNAME: user
-      SPRING_DATASOURCE_PASSWORD: user    
+      SPRING_DATASOURCE_URL: jdbc:mysql://db:3306/mysqldb
+      SPRING_DATASOURCE_USERNAME: root
+      SPRING_DATASOURCE_PASSWORD: root    
     networks: # Networks to join (Services on the same network can communicate with each other using their name)
       - backend
       - frontend
@@ -24,7 +24,7 @@ services:
   # Frontend Service 
   app-client:
     build:
-      context: frontend # Use an image built from the specified dockerfile in the `polling-app-client` directory.
+      context: frontend # Use an image built from the specified dockerfile in the `frontend` directory.
       dockerfile: Dockerfile
       args:
         REACT_APP_API_BASE_URL: http://127.0.0.1:8080/api
@@ -43,7 +43,7 @@ services:
         - "3306:3306"
     command: --init-file /data/application/init.sql
     volumes:
-        - db-data:/data/application/init.sql
+        - ./backend/init.sql:/data/application/init.sql
         - eventus_data:/var/lib/mysql
     environment:
         MYSQL_ROOT_USER: root
@@ -51,13 +51,8 @@ services:
         MYSQL_DATABASE: mysqldb
         MYSQL_USER: user
         MYSQL_PASSWORD: user
-    networks:
-      - backend  
-  
-# Volumes
 volumes:
-  db-data:
-  eventus_data:
+  eventus_data: {}
   
 # Networks to be created to facilitate communication between containers
 networks:
