--- a/.github/workflows/eventus-cicd.yml
+++ b/.github/workflows/eventus-cicd.yml
@@ -1,4 +1,5 @@
-# This workflow will launch the frontend and backend tests when changes are detected in the develop branch.
+# This workflow will launch the frontend and backend tests when changes are detected in the develop or main branches.
+# It also start a static analysis and coverage analysis from Codacy
 
 name: EventUS CI/CD
 
@@ -57,3 +58,14 @@ jobs:
       run: 
         npm install
         npm run test
+  
+  codacy-coverage-reporter:
+    runs-on: ubuntu-latest
+    name: codacy-coverage-reporter
+    steps:
+      - uses: actions/checkout@v2
+      - name: Run codacy-coverage-reporter
+        uses: codacy/codacy-coverage-reporter-action@v1
+        with:
+          api-token: ${{ secrets.CODACY_API_TOKEN }}
+          coverage-reports: backend/target/site/jacoco/jacoco.xml
