--- a/.github/workflows/eventus-cicd.yml
+++ b/.github/workflows/eventus-cicd.yml
@@ -53,10 +53,12 @@ jobs:
       uses: actions/setup-node@v2
       with:
         node-version: '16'
-    - name: Run frontend test
+    - name: Install frontend dependencies
       run: 
         npm install
-        npm run test
+    - name: Run frontend tests with coverage
+      run:
+        npm run coverage
   
   codacy-coverage-reporter:
     runs-on: ubuntu-latest
