--- a/.github/workflows/eventus-cicd.yml
+++ b/.github/workflows/eventus-cicd.yml
@@ -40,8 +40,6 @@ jobs:
     - name: Build with Maven
       run: |
         mvn --batch-mode --update-snapshots verify
-    - name: WorkingTree (Debug only)
-      run: tree -d -L 2
     #This step will share coverage data to codacy-coverage-reporter job
     - uses: actions/upload-artifact@v2
       with:
@@ -77,10 +75,8 @@ jobs:
       - uses: actions/download-artifact@v2
         with:
           name: backend-coverage
-      - name: WorkingTree (Debug only)
-        run: tree -d -L 2
       - name: Run codacy-coverage-reporter
         uses: codacy/codacy-coverage-reporter-action@v1
         with:
           api-token: ${{ secrets.CODACY_API_TOKEN }}
-          coverage-reports: 'backend/target/site/jacoco/jacoco.xml'
+          coverage-reports: 'jacoco.xml'
