--- a/.github/workflows/eventus-cicd.yml
+++ b/.github/workflows/eventus-cicd.yml
@@ -79,8 +79,11 @@ jobs:
       - uses: actions/download-artifact@v2
         with:
           name: backend-coverage
+      - uses: actions/download-artifact@v2
+        with:
+          name: front-coverage
       - name: Run codacy-coverage-reporter
         uses: codacy/codacy-coverage-reporter-action@v1
         with:
-          api-token: ${{ secrets.CODACY_API_TOKEN }}
+          project-token: ${{ secrets.CODACY_PROJECT_TOKEN }}
           coverage-reports: 'jacoco.xml, lcov.info'
