fix #87 - ci: Added language param to codacy

--- a/.github/workflows/eventus-cicd.yml
+++ b/.github/workflows/eventus-cicd.yml
@@ -87,3 +87,4 @@ jobs:
         with:
           project-token: ${{ secrets.CODACY_PROJECT_TOKEN }}
           coverage-reports: 'jacoco.xml, lcov.info'
+          language: 'Java, TypeScropt'
