--- a/.github/workflows/eventus-cicd.yml
+++ b/.github/workflows/eventus-cicd.yml
@@ -5,7 +5,7 @@ name: EventUS CI/CD
 
 on:
   push:
-    branches: [ main, develop ]
+    branches: [ main, develop, devops/#87-github-actions ]
   pull_request:
     branches: [ main, develop ]
 
