--- a/.github/workflows/eventus-cicd.yml
+++ b/.github/workflows/eventus-cicd.yml
@@ -85,5 +85,5 @@ jobs:
       - name: Run codacy-coverage-reporter
         run: |
           export CODACY_PROJECT_TOKEN=${{ secrets.CODACY_PROJECT_TOKEN }}
-          bash <(curl -Ls https://coverage.codacy.com/get.sh) report -r jacoco.xml
+          bash <(curl -Ls https://coverage.codacy.com/get.sh) report -r lcov.info
 
