--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "prettier-plugin-tailwindcss": "^0.1.8",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.28.0",
     "react-router": "^6.2.2",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
