--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.13",
     "autoprefixer": "^10.4.2",
+    "axios": "^0.26.1",
     "mui": "0.0.1",
     "postcss": "^8.4.7",
     "prettier": "^2.5.1",
