#139-ci: Added swagger api documentain to backend application

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -8,6 +8,7 @@ spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.defer-datasource-initialization=true
 spring.sql.init.mode=always
+spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
 
 spring.security.user.name=user 
 spring.security.user.password=user
