--- a/deployment/docker-compose.yml
+++ b/deployment/docker-compose.yml
@@ -27,7 +27,7 @@ services:
       context: ../frontend # Use an image built from the specified dockerfile in the `frontend` directory.
       dockerfile: Dockerfile
       args:
-        REACT_APP_API_BASE_URL: https://api.eventus.space
+        REACT_APP_API_BASE_URL: ${REACT_APP_API_BASE_URL}
     ports:
       - "${CLIENT_APP_PORT}:80" # Map the exposed port 8000 on the container to port 9090 on the host machine
     restart: always
