#154 - feat: PaymentIntents to our Stripe account
Allow to create fictional payments to our Stripe account from a testing account ****...**4242.

--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -101,7 +101,11 @@
 			<artifactId>springfox-swagger-ui</artifactId>
 			<version>2.9.2</version>
 		</dependency>
-
+		<dependency>
+			<groupId>com.stripe</groupId>
+			<artifactId>stripe-java</artifactId>
+			<version>20.77.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
