--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -12,3 +12,7 @@ spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
 
 spring.security.user.name=user 
 spring.security.user.password=user
+
+#stripe keys
+stripe.key.public=public key
+stripe.key.secret=secret key
