--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -12,3 +12,5 @@ spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
 
 spring.security.user.name=user 
 spring.security.user.password=user
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
