--- a/deployment/docker-compose.yml
+++ b/deployment/docker-compose.yml
@@ -14,7 +14,7 @@ services:
     depends_on: 
       - database # This service depends on mysql. Start that first.
     environment: # Pass environment variables to the service
-      SPRING_DATASOURCE_URL: jdbc:mysql://database:${DB_PORT}/mysqldb
+      SPRING_DATASOURCE_URL: jdbc:mysql://database:3306/mysqldb
       SPRING_DATASOURCE_USERNAME: root
       SPRING_DATASOURCE_PASSWORD: root    
     networks: # Networks to join (Services on the same network can communicate with each other using their name)
@@ -39,8 +39,6 @@ services:
   # Database Service (Mysql)
   database:
     image: mariadb:latest
-    ports:
-        - "${DB_PORT}:3306"
     environment:
         MYSQL_ROOT_USER: root
         MYSQL_ROOT_PASSWORD: root
