--- a/deployment/docker-compose.yml
+++ b/deployment/docker-compose.yml
@@ -8,6 +8,8 @@ services:
     build:
       context: ../backend # Use an image built from the specified dockerfile in the `backend` directory.
       dockerfile: Dockerfile
+      args:
+        - STRIPE_KEY_PRIVATE=${STRIPE_KEY_PRIVATE}  
     ports:
       - "${SERVER_APP_PORT}:8080" # Forward the exposed port 8080 on the container to port 8080 on the host machine
     restart: always
@@ -16,7 +18,7 @@ services:
     environment: # Pass environment variables to the service
       SPRING_DATASOURCE_URL: jdbc:mysql://database:${DB_PORT}/mysqldb
       SPRING_DATASOURCE_USERNAME: root
-      SPRING_DATASOURCE_PASSWORD: root    
+      SPRING_DATASOURCE_PASSWORD: root  
     networks: # Networks to join (Services on the same network can communicate with each other using their name)
       - backend
       - frontend
