--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "antd": "^4.19.2",
     "autoprefixer": "^10.4.2",
     "axios": "^0.26.1",
+    "lodash": "^4.17.21",
     "moment": "^2.29.2",
     "mui": "0.0.1",
     "postcss": "^8.4.7",
